<resources>
    <string name="app_name">TesteAiko</string>
    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="mostra_as_posicoes_dos_veiculos">Mostra as posicoes dos veiculos</string>
    <string name="mostra_as_paradas_dos_veiculos">Mostra as paradas dos veiculos</string>
    <string name="position_vehicles">Position of Vehicles</string>
    <string name="stop_point">Stopping point</string>
    <string name="search">Search</string>
    <string name="lines">Lines</string>
    <string name="search_line">Search a line</string>
    <string name="write_line">Write a line</string>
    <string name="clear">Clear</string>
    <string name="actions">Actions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_stop_title">Search stops</string>
    <string name="search_stop">Search stops</string>
    <string name="see_arrival_timetable">See arrival timetable</string>
</resources>