<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/expand_activities_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/actions"
        app:icon="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/position_vehicles_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/mostra_as_posicoes_dos_veiculos"
        app:fabSize="normal"
        android:visibility="gone"
        android:backgroundTint="@color/green"
        app:srcCompat="@drawable/baseline_directions_bus_24"
        app:layout_constraintBottom_toTopOf="@+id/expand_activities_button"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/text_position_vehicles_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/position_vehicles_button"
        app:layout_constraintEnd_toStartOf="@+id/position_vehicles_button"
        app:layout_constraintTop_toTopOf="@+id/position_vehicles_button"
        android:text="@string/position_vehicles"
        android:background="@drawable/rounded_corner"
        tools:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/mostra_as_paradas_dos_veiculos"
        app:fabSize="normal"
        android:visibility="gone"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/position_vehicles_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_bus_alert_24"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/text_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/stop_button"
        app:layout_constraintEnd_toStartOf="@+id/stop_button"
        app:layout_constraintTop_toTopOf="@+id/stop_button"
        android:text="@string/stop_point"
        android:background="@drawable/rounded_corner"
        tools:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/line_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/mostra_as_paradas_dos_veiculos"
        app:fabSize="normal"
        android:visibility="gone"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/stop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_directions_24"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/text_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/line_button"
        app:layout_constraintEnd_toStartOf="@+id/line_button"
        app:layout_constraintTop_toTopOf="@+id/line_button"
        android:text="@string/lines"
        android:background="@drawable/rounded_corner"
        tools:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/mostra_as_paradas_dos_veiculos"
        app:fabSize="normal"
        android:visibility="gone"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/line_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_clear_24"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/text_clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/clear_button"
        app:layout_constraintEnd_toStartOf="@+id/clear_button"
        app:layout_constraintTop_toTopOf="@+id/clear_button"
        android:text="@string/clear"
        android:background="@drawable/rounded_corner"
        tools:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/map_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>